--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,7 +4,7 @@ h1 a {
 }
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #fdc4c3;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -13,19 +13,24 @@ h1 a {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+	text-align: center;
 }
 
 .content {
-    margin-left: 40px;
+	font-family: 'Haan YGodic 230';
+	font-size: 18px;
+	margin-left: 350px;
+	text-align: center;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Haan YGodic 230', cursive;
 }
 
 .date {
     color: green;
 	font-size: 20px;
+	font-family: '210 Sometime';
 }
 
 .save {
@@ -34,19 +39,21 @@ h1, h2, h3, h4 {
 
 .post-form textarea, .post-form input {
     width: 100%;
+	float: right;
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
     font-size: 26pt;
-    margin-right: 20px;
 }
 
 .post {
     margin-bottom: 70px;
+	
 }
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+	font-family: 'Haan YGodic 230';
 }
